<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/register_choose"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number"
        android:textColor="@color/white"
        android:textSize="@dimen/login_textsize" />

    <LinearLayout
        android:id="@+id/ll_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_edittext_login"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/phonenumber" />

        <EditText
            android:id="@+id/et_phonenumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_phonenumber"
            android:inputType="phone"
            android:textColorHint="@color/login_hint"
            android:textSize="@dimen/login_texthintsize" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_OTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/send_code"
        android:textColor="@color/white"
        android:textSize="@dimen/login_textsize" />

    <LinearLayout
        android:id="@+id/ll_OTP"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_otp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_edittext_login"
            android:orientation="horizontal"
            android:paddingRight="5dp" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:src="@drawable/otp" />

            <EditText
                android:id="@+id/et_otp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:hint="@string/hint_code"
                android:inputType="phone"
                android:textColorHint="@color/login_hint"
                android:textSize="@dimen/login_texthintsize" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_otp"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/selector_otp_press"
            android:text="@string/otp"
            android:textColor="@color/white"
            android:textSize="@dimen/login_textsize" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/pwd"
        android:textColor="@color/white"
        android:textSize="@dimen/login_textsize" />

    <LinearLayout
        android:id="@+id/ll_pwd"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_edittext_login"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/password" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/hint_pwd"
            android:textColorHint="@color/login_hint"
            android:textSize="@dimen/login_texthintsize" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:text="@string/recommander"
        android:textColor="@color/white"
        android:textSize="@dimen/login_textsize" />

    <LinearLayout
        android:id="@+id/ll_recommender"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:visibility="gone"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_edittext_login"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/inverstnumber" />

        <EditText
            android:id="@+id/et_recommender"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/referrer_phone_number"
            android:inputType="number"
            android:textColorHint="@color/login_hint"
            android:textSize="@dimen/register_texthintsize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/read_and_agree"
            android:textColor="@color/white"
            android:textSize="@dimen/register_texthintsize" />

        <TextView
            android:id="@+id/tv_register_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/regist_protocol"
            android:textColor="@color/login_register"
            android:textSize="@dimen/register_texthintsize" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/selector_buttonround"
        android:text="@string/start_regist"
        android:textColor="@color/white"
        android:textSize="@dimen/login_loginsize" />

</LinearLayout>